--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.8.3",
     "date-fns": "^2.25.0",
     "fusioncharts": "^3.18.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fusioncharts": "^3.1.2",
